--- a/Quicksort/index.html
+++ b/Quicksort/index.html
@@ -7,7 +7,7 @@
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.js"></script>
     <script src="p5.sound.js"></script>
-    <script src="quicksort.js"></script>
+    <script src="bubblesort.js"></script>
   </head>
   <body>
     <h1>Hello, world! :)</h1>
