--- a/BubbleSort/index.html
+++ b/BubbleSort/index.html
@@ -9,7 +9,7 @@
     <script src="p5.sound.js"></script>
     <script src="bubblesort.js"></script>
   </head>
-  <body>
+  <body id="main">
     <h1>Hello, world! :)</h1>
   </body>
 </html>
